# PrivateFrameworks

./: CMakeLists.txt  main.mm  notes.md  readme.md
include/CoreBrightness.framework/headers/: AmbientLightSensorStats.h  BrightnessSystemClient.h  CBABCurve.h  CBAdaptationClient.h  CBBlueLightClient.h  CBClient.h  DisplayALSManager.h  KeyboardBrightnessClient.h
simplebrightness/: library.h  library.mm
